<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.AddNoteFragment">
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task"
        android:id="@+id/edit_task"
        android:inputType="text"
        />
    <EditText
        android:layout_below="@+id/edit_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:gravity="top"
        android:id="@+id/edit_description"
        android:inputType="textMultiLine"/>
<!--    below is extra-->
    <EditText
        android:layout_below="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project"
        android:id="@+id/edit_project"
        android:inputType="text"
        />
    <EditText
        android:layout_below="@+id/edit_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client"
        android:id="@+id/edit_client"
        android:inputType="text"
        />
<!--    <EditText-->
<!--        android:layout_below="@+id/edit_client"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/starting_date_yyyy_mm_dd"-->
<!--        android:id="@+id/edit_start_date"-->
<!--        android:inputType="text"-->
<!--        />-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_client"
        android:hint="@string/pick_starting_date"
        android:id="@+id/start_date_pick"
        />
<!--    <EditText-->
<!--        android:layout_below="@+id/start_date_pick"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/end_date_yyyy_mm_dd"-->
<!--        android:id="@+id/edit_end_date"-->
<!--        android:inputType="text"-->
<!--        />-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_date_pick"
        android:hint="@string/pick_ending_date"
        android:id="@+id/end_date_pick"
        />
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/display_start_date"-->
<!--        android:textSize="35dp"-->
<!--        android:padding="20dp"-->
<!--        />-->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_done"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:tint="@android:color/white"
        android:layout_alignParentEnd="true"
        android:clickable="true"
         />
</RelativeLayout>