<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/due_over_sno"
        android:text="@string/s_no"
        android:background="@drawable/cell_shape"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"/>

    <TextView
        android:id="@+id/over_due_task"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:background="@drawable/cell_shape"
        android:layout_column="1"
        android:text="@string/task"
        android:textColor="@color/design_default_color_on_secondary" />

    <TextView
        android:id="@+id/over_due_date"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:background="@drawable/cell_shape"
        android:layout_column="2"
        android:text="@string/days_left"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary" />



</GridLayout>