<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/completed_sno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:text="@string/s_no"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintEnd_toStartOf="@+id/completed_task"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/completed_task"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/task"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/completed_date"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/days_left"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintEnd_toEndOf="@+id/completed_task"
                app:layout_constraintTop_toBottomOf="@+id/completed_task" />

            <TextView
                android:id="@+id/completed_time_taken"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginStart="28dp"
                android:text="@string/hours_worked"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/completed_task" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>