<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="5dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/progress_sno"
                android:layout_width="45dp"
                android:layout_height="18dp"
                android:gravity="center"
                android:text="@string/s_no"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/progress_task"
                android:layout_width="177dp"
                android:layout_height="18dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="4dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/task"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintStart_toEndOf="@+id/progress_sno"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/progress_days_left"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginStart="40dp"
                android:layout_marginTop="4dp"

                android:gravity="center"
                android:text="@string/days_left"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress_task" />

            <TextView
                android:id="@+id/progress_hours"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginStart="152dp"
                android:layout_marginTop="4dp"

                android:gravity="center"
                android:text="@string/hours_worked"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress_task" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>